# MCPScout

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  __main__.py  cli.py  docker-compose.yml  mcp_config.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
agents/: __init__.py  research_agent.py
crawler/: engine.py  extractor.py  hybrid.py  smart_crawler.py  stealth.py
docs/: USEFUL_LIBS.md
mcp_server/: __main__.py  handlers.py  server.py  unified.py
mcpspider/: __init__.py  __main__.py  cli.py  version.py
mcpspider/crawler/: engine.py  extractor.py  smart_crawler.py  stealth.py
mcpspider/mcp_server/: server.py  unified.py
mcpspider/social/: facebook.py  twitter.py
mcpspider/summarizer/: ai_summarizer.py
scripts/: benchmark_search_and_crawl.py  release.py
search/: aggregator.py
social/: __init__.py  github.py  reddit.py  youtube.py
tests/: test_extractor.py  test_http_client.py  test_hybrid.py  test_mcp_integration.py  test_mcp_tools.py  test_rate_limiter.py  test_search_parsers.py
utils/: cache.py  dedup.py  http_client.py  rate_limiter.py
