[project]
name = "mcpsearch"
version = "1.0.0"
description = "MCPSearch - AI-powered multi-source intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "hishel>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "extruct>=0.17.0",
    "selectolax>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "coverage>=7.0.0",
]
browser = [
    "playwright>=1.40.0",
]

[project.scripts]
mcpsearch = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "crawler", "search", "social", "mcp_server", "summarizer", "utils"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
